<resources>
    <string name="app_name">pizza</string>
    <string name="pizzaBaslik">Beef Cheese</string>
    <string name="peynirYazi">cheese</string>
    <string name="sucukYazi">sausage</string>
    <string name="zeytinYazi">olive</string>
    <string name="biberYazi">pepper</string>
    <string name="teslimatSuresi">20 min</string>
    <string name="teslimatBaslik">delivery</string>
    <string name="pizzaAciklama">Meat lover ,  get ready to meet your pizza !</string>
    <string name="fiyatYazi">$ 5.98</string>
    <string name="buttonYazi">add to card</string>




</resources>