<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:text="pizza"
            android:textColor="@color/yaziRenk"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/baslikTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pizzaBaslik"
        android:textColor="@color/anaRenk"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/pizzaImage"
        android:layout_width="215dp"
        android:layout_height="263dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baslikTxt"
        app:srcCompat="@drawable/pizza" />

    <com.google.android.material.chip.Chip
        android:id="@+id/peynirChipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/peynirYazi"
        android:textColor="@color/yaziRenk"
        app:chipBackgroundColor="@color/anaRenk"
        app:chipStrokeColor="@color/anaRenk"
        app:layout_constraintEnd_toStartOf="@+id/sucukChipBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <com.google.android.material.chip.Chip
        android:id="@+id/sucukChipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sucukYazi"
        android:textColor="@color/yaziRenk"
        app:chipBackgroundColor="@color/anaRenk"
        app:chipStrokeColor="@color/anaRenk"
        app:layout_constraintEnd_toStartOf="@+id/zeytinChipBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/peynirChipBtn"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <com.google.android.material.chip.Chip
        android:id="@+id/zeytinChipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zeytinYazi"
        android:textColor="@color/yaziRenk"
        app:chipBackgroundColor="@color/anaRenk"
        app:chipStrokeColor="@color/anaRenk"
        app:layout_constraintEnd_toStartOf="@+id/biberChipBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sucukChipBtn"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <com.google.android.material.chip.Chip
        android:id="@+id/biberChipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/biberYazi"
        android:textColor="@color/yaziRenk"
        app:chipBackgroundColor="@color/anaRenk"
        app:chipStrokeColor="@color/anaRenk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zeytinChipBtn"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <TextView
        android:id="@+id/siparisSuresiTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/teslimatSuresi"
        android:textColor="@color/yaziRenk2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sucukChipBtn" />

    <TextView
        android:id="@+id/teslimatBaslikTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/teslimatBaslik"
        android:textColor="@color/anaRenk"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/siparisSuresiTxt"
        app:layout_constraintStart_toStartOf="@+id/siparisSuresiTxt"
        app:layout_constraintTop_toBottomOf="@+id/siparisSuresiTxt" />

    <TextView
        android:id="@+id/aciklamaTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/pizzaAciklama"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teslimatBaslikTxt" />

    <TextView
        android:id="@+id/fiyatTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fiyatYazi"
        android:textColor="@color/anaRenk"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sepeteEklemeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/buttonYazi"
        android:textColor="@color/yaziRenk"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>